[project]
name = "srm"
version = "2025.03.18"
description = "Tool for modeling solid rocket motor performance "
authors = [
    {name = "Ray Patrick", email = "rcp0041@auburn.edu"}
]

requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
]

[project.urls]
Github = "https://github.com/rcp0041/srm"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["srm*"]
